--- a/src/App.css
+++ b/src/App.css
@@ -215,8 +215,8 @@ nav .main-ul li .switch-toggle i {
 @media (max-width: 950px) {
 
   .nav-right .panal,
-  .main-page-link-wrapper li a i {
-    display: none;
+  .main-page-link-wrapper li a i ,.overview {
+    display: none !important;
   }
 
   .plus-icon {
@@ -232,7 +232,7 @@ nav .main-ul li .switch-toggle i {
   .menu {
     width: 350px;
     position: absolute;
-    top: 75px;
+    top: 64px;
     left: -100%;
     margin-left: 0 !important;
     transition: 0.5s ease-in-out;
@@ -258,18 +258,22 @@ nav .main-ul li .switch-toggle i {
     width: 100%;
     display: block;
     text-align: left;
-    margin: 10px 0;
+    margin: 5px 0;
     padding: 5px 0;
   }
 
   nav .main-ul li a {
     font-size: 18px;
+    display: block;
+  }
+  nav .main-ul li a.down-btn{
+    display: inline-block;
   }
 
-  nav .main-ul li i {
+  nav .main-ul li svg {
     float: right;
     margin-top: 4px;
-    padding: 0 20px;
+    
   }
 
   .bar {
@@ -283,7 +287,7 @@ nav .main-ul li .switch-toggle i {
     position: relative;
     top: 0;
     left: 50%;
-    background: rgb(0, 0, 0);
+   
     border: none;
     height: auto;
     z-index: 1000;
@@ -363,7 +367,7 @@ nav .main-ul li .switch-toggle i {
   .nav-top-mobile {
     width: 100%;
     display: block;
-    margin-top: 10px;
+   
   }
 
   nav .main-ul li.search {
