--- a/src/index.css
+++ b/src/index.css
@@ -10,9 +10,8 @@
   text-decoration: none;
   box-sizing: border-box;
   outline: none;
-  font-family: 'Roboto', sans-serif;
-  
-  scroll-behavior: smooth;
+  font-family: 'Nunito', sans-serif;
+
 }
 
 h1,
